objects/vlocity_ins__OrchestrationQueue__c.object
<CustomObject>
    <description>Vlocity Order Management can be configured to process orders in more than one stream of processing. Each Orchestration Queue represents a different stream of processing. Orchestration Items (fulfillment tasks) are each assigned to a particular queue ensuring the processing happens through a different background job.</description>
    <fields>
        <fullName>vlocity_ins__BatchSize__c</fullName>
        <defaultValue>1</defaultValue>
        <label>Batch Size</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClientID__c</fullName>
        <label>Client ID</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__ClientSecret__c</fullName>
        <label>Client Secret</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__IsDefault__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__LoginURL__c</fullName>
        <label>Login URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationJobId__c</fullName>
        <label>Orchestration Job Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__OrchestrationSchedulerImplementationId__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Orchestration Scheduler Implementation</label>
        <referenceTo>vlocity_ins__OrchestrationSchedulerImplementation__c</referenceTo>
        <relationshipLabel>Orchestration Queues</relationshipLabel>
        <relationshipName>OrchestrationQueues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Password__c</fullName>
        <label>Password</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__Replicas__c</fullName>
        <description>Kubernetes Pod Replicas</description>
        <label>Replicas</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__SiteURL__c</fullName>
        <label>Site URL</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vlocity_ins__State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Stopped</fullName>
                    <default>true</default>
                    <label>Stopped</label>
                </value>
                <value>
                    <fullName>Running</fullName>
                </value>
                <value>
                    <fullName>Suspended</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>vlocity_ins__Username__c</fullName>
        <label>Username</label>
        <length>175</length>
        <type>Text</type>
    </fields>
    <label>Orchestration Queue</label>
    <listViews>
        <fullName>vlocity_ins__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Orchestration Queue Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Orchestration Queues</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>